# superclaude

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: .gitignore
.claude/agents/: cache-manager.md  context-synth.md  incremental-analyzer.md  planner.md  tester.md  workflow-orchestrator.md
.claude/commands/: context.md  eco-mode.md
.claude/hooks/: pre_tool_use.sh
.claude/workflows/: feature-development.yaml  schema.yaml  test-workflow.yaml
docs/: Implementation-Progress.md  Super CC Architecture.md  Super CC Technical Implementation Plan.json
scripts/: setup_claude.sh
super_cc/: __init__.py  cli.py  installer.py  integration.py  validation.py
super_cc/templates/.claude/: .gitignore
super_cc/templates/.claude/agents/: architect.md  debugger.md  documenter.md  reviewer.md  tester.md
super_cc/templates/.claude/cache/: cache-manifest.json  invalidation-rules.yaml  last-analysis-commit
super_cc/templates/.claude/commands/: agent-status.md  cache-optimize.md  cache-status.md  cache-test.md  context-synth.md  revert.md  review.md  tdd.md  token-usage.md  workflow.md
super_cc/templates/.claude/context/: last-build-commit
super_cc/templates/.claude/context/summaries/: _claude_agents_planner_md_summary.json  _claude_commands_tdd_md_summary.json  _claude_hooks_pre_tool_use_sh_summary.json  docs_Super_CC_Architecture_md_summary.json
super_cc/templates/.claude/hooks/: post_tool_use.sh
super_cc/templates/.claude/settings/: eco-mode.json
super_cc/templates/.claude/state/: README.md  context.json  workflow-state-schema.json
super_cc/templates/.claude/workflows/: bug-fix.yaml  conditions.yaml  refactoring.yaml  review-only.yaml
